2008-03-11  Halton Huo <nonsea@users.sourceforge.net>

	* SFEanjuta.spec: Bump to 2.4.0
	* base-specs/vinagre.spec: Bump to 0.5.0

2008-03-10  Albert Lee <trisk@acm.jhu.edu>

	* SFElibaudioio.spec: *NEW* LibAudioIO - audio foundation library
	* SFEwine.spec: Add SFElibaudioio dependency for Sun audio
	* patches/libaudioio-01-sunpro.diff: Allow building with Studio

2008-03-10  Brian Cameron <brian.cameron@sun.com>

	* SFEaudacity.spec, patches/audacity-10-fixconstint.diff,
	  patches/audacity-16-AudioIO.diff:  Add new patch #16 to fix
	  problem building with Sun Studio 12.  Updated patch #10 so it
	  is smarter.

2008-03-10  Petr Sobotka  <sobotkap@centrum.cz>

	* SFEwesnoth.spec: Bump to 1.4
	  This is stable version so preferenced directory was
	  changes so later I will create SFEwesnoth-dev for dev
	  releases.

2008-03-10  Halton Huo <nonsea@users.sourceforge.net>

	* SFEgnucash.spec: Bump to 2.2.4

2008-03-10  Halton Huo <nonsea@users.sourceforge.net>

	* base-specs/gdl.spec: Bump to 0.7.11
	* base-specs/gnome-build.spec: Bump to 0.2.4

2008-03-10  Halton Huo <nonsea@users.sourceforge.net>

	* SFEslib.spec: fix build error

2008-03-10  Laszlo (Laca) Peter  <laca@sun.com>

	* SFEgcc.spec: add missing defattr
	* encumbered/SFExine-ui.spec: delete undefined gcc_ldflags macro
	  from LDFLAGS

2008-03-09  Brian Cameron <brian.cameron@sun.com>

	* SFEaudacity.spec: Add new patches to allow building with Sun
	  Studio.  Fix so that libmad, libid3tag, and libtwolame are only
	  included if they are already installed, so this spec doesn't 
	  build with any encumbered dependencies unless already installed
	  on the system.  So moving this spec out of the encumbered
	  directory.  Also, add patch to build without GNU gettext if it is
	  not already installed on the system.
	* audacity-05-fixsed.diff,
	  audacity-06-noopt.diff,
	  audacity-07-nowall.diff,
	  audacity-08-fixSoundTouch.diff,
	  audacity-09-nogccdetect.diff,
	  audacity-10-fixconstint.diff,