@@ -22,13 +22,20 @@
 		<service_fmri value='svc:/system/filesystem/local'/>
 	</dependency>
 
-	<dependency
-	    name='utmpx'
-	    grouping='require_all'
-	    restart_on='none'
-	    type='service'>
-		<service_fmri value='svc:/system/utmp'/>
-	</dependency>
+        <dependency name='multi-user'
+            grouping='require_all'
+            restart_on='error'
+            type='service'>
+                <service_fmri value='svc:/milestone/multi-user:default'/>
+        </dependency>
+
+        <dependency
+            name='sysconfig'
+            grouping='require_all'
+            restart_on='none'
+            type='service'>
+                <service_fmri value='svc:/milestone/sysconfig'/>
+        </dependency>
 
 	<dependency
 	    name='fc-cache'
@@ -36,6 +43,14 @@
 	    restart_on='none'
 	    type='service'>
 		<service_fmri value='svc:/application/font/fc-cache'/>
+	</dependency>
+
+	<dependency
+	    name='utmpx'
+	    grouping='require_all'
+	    restart_on='none'
+	    type='service'>
+		<service_fmri value='svc:/system/utmp'/>
 	</dependency>
 
         <dependency
